--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,3 +1,13 @@
+.main-nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 25px 30px;
+	img {
+		height: 70px;
+	}
+
+}
 ul.menu {
 	margin: 0;
 	padding: 0;
@@ -7,8 +17,12 @@ ul.menu {
 		a {
 			color: #333;
 			padding: 10px;
-			background: #333;
-			color: white;
+			color: black;
+			font-family: 'Montserrat', sans-serif;
+			text-transform: uppercase;
+			letter-spacing: 2px;
+			font-size: 11px;
+			transition: all 0.3s;
 		}
 	}
 }
