--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,3 +1,13 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+	padding: 0;
+}
+
 a {
 	color: #BA209B;
 	text-decoration: none;
@@ -10,6 +20,8 @@ a {
 
 p {
 	line-height: 1.5;
+	margin: 0;
+	padding: 0;
 }
 
 /*blockquotes*/
