--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,7 @@
 
 @import 'normalize';
 @import 'typography';
+@import 'front-page';
 @import 'navigation';
 @import 'sidebar';
 @import 'comments';
