--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,3 +1,30 @@
 footer {
 	clear: both;
 }
+.page-footer {
+	background: black;
+	padding: 30px;
+	.container {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	p {
+		text-transform: uppercase;
+		font-size: 10px;
+		letter-spacing: 2px;
+		color: lightgrey;
+	}
+
+}
+.footer-social {
+	list-style-type: none;
+	display: flex;
+	padding: 0;
+	margin: 0;
+	a {
+		color: lightgrey;
+		font-size: 18px;
+		margin: 0 5px;
+	}
+}
