--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,11 +26,14 @@ img {
 }
 
 body {
-	color: #333;
+	color: #2F2F33;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 16px;
 }
 
 .container {
 	max-width: 1200px;
+	border: 1px solid red;
 	margin: 0 auto;
 }
 
