--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,7 @@
 @import 'normalize';
 @import 'typography';
 @import 'front-page';
+@import 'contact';
 @import 'blog';
 @import 'navigation';
 @import 'sidebar';
@@ -30,7 +31,7 @@ body {
 }
 
 .container {
-	max-width: 1200px;
+	max-width: 1000px;
 	margin: 0 auto;
 }
 
