--- a/sass/style.scss
+++ b/sass/style.scss
@@ -50,7 +50,7 @@ body {
 	// background-image: url(../project-7-theme/images/bg.png), linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
 	// background-size: cover;
 	// background-position: center;
-	background: black;
+	background: #212127;
 	display: flex;
 	justify-content: center;
 	align-items: center;
