--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -2,7 +2,7 @@ footer {
 	clear: both;
 }
 .page-footer {
-	background: black;
+	background: #212127;
 	padding: 30px;
 	.container {
 		display: flex;
