--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,11 +1,12 @@
 .sidebar {
-	width: 30%;
+	width: 32%;
 	float: left;
 	ul {
 		margin: 0;
 		padding: 0;
 		li {
 			list-style: none;
+			padding: 0;
 		}
 	}
 	h3 {
@@ -18,7 +19,7 @@
 	}
 	.widget_recent_entries {
 		li {
-			margin: 5px 0;
+			margin: 12px 0;
 		}
 		a {
 			color: #2F2F33;
@@ -28,7 +29,7 @@
 		}
 	}
 	.widget_search {
-		margin: 25px 0;
+		margin: 0 0 15px;
 		input[type="search"] {
 			border: 1px solid #eee;
 			outline: transparent;
@@ -37,11 +38,47 @@
 			width: 68%
 		}
 		input[type="submit"] {
-			background: black;
+			background: #212127;
 			color: white;
 			border: none;
 			padding: 6px;
 			width: 25%;
+			transition: all 0.4s;
+			&:hover {
+				background: #EBEBEB;
+				color: black;
+			}
+		}
+	}
+	.widget_categories {
+		li {
+			margin: 15px 0;
+		}
+		a {
+			color: #26292a;
+		    font-size: 12px;
+		    font-weight: 300;
+		    letter-spacing: 2px;
+		    text-transform: uppercase;
+		}
+	}
+	.tagcloud {
+		padding-top: 15px;
+		a {
+		    background-color: #fff;
+		    border: 1px solid #eee;
+		    color: #434955;
+		    border-radius: 18px;
+		    display: inline-block;
+		    font-size: 15px;
+		    padding: 0 10px;
+		    font-weight: 300;
+		    line-height: 26px;
+		    margin: 0 8px 10px 0;
+		    transition: all 0.4s;
+		    &:hover {
+		    	background: #EBEBEB;
+		    }
 		}
 	}
 }
