Web optimzed images, finshed contact.php, styled contact.php

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,10 @@
 * Author URI: http://hackeryou.com
 */
 
+// Colour Variables
+
+$black: #2F2F33;
+
 @import 'normalize';
 @import 'typography';
 @import 'front-page';
