--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,42 +1,101 @@
+.contact-info,
+.form-map {
+	margin: 0 auto;
+	max-width: 1000px;
+}
 .contact-info {
+	letter-spacing: 2px;
 	padding: 50px 0;
 	text-align: center;
 	display: flex;
-	justify-content: space-around;
+	
+	a {
+		color: $black;
+	}
+
 	> div {
-		border: 1px solid yellow;
 		text-transform: uppercase;
 		width: 100%;
 		display: flex;
-		align-items: center;
-		justify-content: center;
+		flex-direction: column;
+		
+		.fa {
+			margin-bottom: 15px;
+		}
+		
+		.fa.fa-envelope {
+			font-size: 26px;
+		}
 	}
 }
+
+
 .form-map {
 	margin-bottom: 50px;
 	width: 100%;
 	display: flex;
+	
 	.form {
-		background-color: red;
+		background-color: $black;
 		margin: 0;
+		padding: 15px 15px 0 15px;
 		width: 50%;
-	}
-	input {
-		border: none;
-		border-bottom: 1px solid black;
 
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		
+		label,
+		input,
+		textarea {
+			font-family: 'Open Sans';
+			width: 100%;
+		}
+
+		label {
+			color: #E5E5E5;
+			font-size: 12px;
+			letter-spacing: 2px;
+		}
+
+		input,
+		textarea {
+			padding: 5px 10px;
+		}
+		
+		textarea {
+			height: 150px;
+			margin-bottom: 18px;
+		}
+
+		label,
+		input[type=submit] {
+			text-transform: uppercase;
+		}
+
+		input,
+		textarea {
+			background-color: #E5E5E5;
+			border: none;
+		}
+
+		input[type=submit] {
+			background-color: lighten($black, 25);
+			color: #E5E5E5;
+			font-size: 14px;
+			letter-spacing: 2px;
+		}
 	}
+
 	.map {
 		width: 50%;
-		// iframe {
-			// width: 100%;
-		// }
 	}
 }
 .acf-map {
 	border: #ccc solid 1px;
-	height: 425px;
+	height: 430px;
 	width: 100%;
+
 }
 
 /* fixes potential CSS theme conflict */
