--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,6 +1,6 @@
 .about-section {
 	width: 100%;
-	padding: 140px;
+	padding: 140px 0;
 	.about-container {
 		max-width: 925px;
 		margin: 0 auto;
@@ -24,7 +24,23 @@
 	justify-content: space-between;
 	.about-image {
 		border: 1px solid black;
-		height: 320px;
 		width: 23%;
+		img {
+			width: 100%;
+			max-height: 300px;
+		}
+		.portrait {
+			background-size: cover;
+			background-position: center;
+			height: 300px;
+		}
+		p {
+			margin: 6px auto;
+		}
+	}
+	h4 {
+		font-family: 'Merriweather', serif;
+		font-size: 18px;
+		font-weight: 500;
 	}
 }
