--- a/sass/_front-page.scss
+++ b/sass/_front-page.scss
@@ -70,11 +70,9 @@
 .accent {
 	margin: 20px auto 0;
 }
-
 .portfolio-section {
 	background-color: $black;
 }
-
 .overlay {
 	background: url("../project-7-theme/images/dot.png");
 }
@@ -98,6 +96,7 @@
 
 	p {
 		color: #8A8A8A;
+		margin-top: 15px;
 	}
 }
 .portfolio-images {
@@ -107,4 +106,25 @@
 }
 .portfolio-image {
 	width: 50%;
+}
+.quote-section {
+	width: 100%;
+	padding: 100px 0;
+	.quote-container {
+		max-width: 925px;
+		margin: 0 auto;
+		text-align: center;
+		h5 {
+			font-weight: 300;
+			font-size: 18.5px;
+			line-height: 24px;
+			font-style: italic;
+		}
+		p {
+			margin: 5px 0;
+			color: #999;
+			font-size: 15px;
+			font-style: italic;
+		}
+	}
 }
