--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,6 +23,8 @@ $black: #212127;
 @import 'sidebar';
 @import 'comments';
 @import 'footer';
+@import 'owl.theme';
+@import 'owl.carousel';
 /*
 ====================================
 Default Styling
