--- a/sass/_front-page.scss
+++ b/sass/_front-page.scss
@@ -13,7 +13,8 @@
 	h1 {
 		letter-spacing: 3px;
 		font-family: 'Montserrat', sans-serif;
-		font-size: 100px;
+		font-size: 90px;
+		font-weight: lighter;
 		color: white;
 		text-transform: uppercase;
 	}
@@ -38,7 +39,7 @@
 	// background-repeat: no-repeat;
 	// background-position: center;
 	width: 100%;
-	padding: 140px 0;
+	padding: 100px 0;
 	.skills-container {
 		margin: 0 auto;
 		text-align: center;
@@ -79,7 +80,7 @@
 .portfolio-container {
 	margin: 0 auto;
 	max-width: 925px;
-	padding: 140px 0;
+	padding: 100px 0;
 	
 	display: flex;
 	justify-content: space-between;
@@ -109,7 +110,7 @@
 }
 .quote-section {
 	width: 100%;
-	padding: 100px 0;
+	padding: 80px 0;
 	.quote-container {
 		max-width: 925px;
 		margin: 0 auto;
@@ -126,5 +127,15 @@
 			font-size: 15px;
 			font-style: italic;
 		}
+	}
+}
+.project-section {
+	width: 100%;
+	padding: 100px 0;
+	.project-container {
+		max-width: 925px;
+		margin: 0 auto;
+		border: 1px solid black;
+		text-align: center;
 	}
 }
