--- a/sass/_front-page.scss
+++ b/sass/_front-page.scss
@@ -123,9 +123,51 @@
 	.project-container {
 		max-width: 925px;
 		margin: 0 auto;
-		border: 1px solid black;
 		text-align: center;
+		p {
+			max-width: 770px;
+			margin: 0 auto;
+		}
 	}
+}
+.project-images {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	margin-top: 25px;
+	.project-image {
+		width: 25%;
+		position: relative;
+		cursor: pointer;
+		img {
+			width: 100%;
+			display: block;
+		}
+		&:hover .project-overlay {
+		visibility: visible;
+		opacity: 1;
+		}
+	}
+}
+.project-overlay {
+		position: absolute;
+		visibility: hidden;
+		opacity: 0;
+		top: 0;
+		bottom: 0;
+		background: rgba(0,0,0,0.55);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		height: 100%;
+		transition: all 0.3s;
+		a {
+			color: white;
+			letter-spacing: 2px;
+			text-transform: uppercase;
+			font-size: 14px;
+		}
 }
 .descriptive-container {
 	margin: 0 auto;
