Responsive styling, finished front-page.php

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,7 +4,7 @@ footer {
 .page-footer {
 	background: $black;
 	padding: 30px;
-	.container {
+	.section-container {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
