--- a/sass/_front-page.scss
+++ b/sass/_front-page.scss
@@ -71,7 +71,7 @@
 // Portfolio/Clients section
 #portfolio-section {
 	.section-container {
-		padding: 100px 0;
+		padding: 100px 20px;
 		display: flex;
 		justify-content: space-between;
 	}
@@ -156,7 +156,7 @@
 #descriptive-section {
 	.section-container {
 		display: flex;
-		padding: 100px 0;
+		padding: 100px 20px;
 	}
 }
 .descriptive-title {
@@ -167,9 +167,9 @@
 		max-width: 380px;
 	}
 }
-.descriptive-text-left {
-	& p:last-child{
-		margin-top: 40px;
+.descriptive-skills {
+	& p:nth-of-type(4) {
+		margin-bottom: 40px;
 	}
 }
 .descriptive-text-left,
@@ -177,7 +177,6 @@
 	color: #8A8A8A;
 	padding: 0 15px;
 	width: 30%;
-
 }
 .descriptive-skill {
 	border-bottom: 2px solid white;
