--- a/sass/_media-query.scss
+++ b/sass/_media-query.scss
@@ -1,3 +1,69 @@
+@media screen and (max-width: 800px) {
+	.page-footer {
+		.section-container {
+			flex-direction: column;
+			p {
+				margin-bottom: 20px;
+				text-align: center;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 750px) {
+	#portfolio-section {
+		.section-container {
+			flex-direction: column;
+		}
+	}
+	.portfolio-text,
+	.portfolio-images {
+		margin: 0 auto;
+		width: 90%;
+	}
+	#descriptive-section {
+		.section-container {
+			flex-direction: column;
+		}
+	}
+	.descriptive-title {
+		width: 100%;
+
+		h2 {
+			margin: 0 auto 30px auto;
+			max-width: 95%;
+		}
+	}
+	.descriptive-text-left,
+	.descriptive-text-right {
+		width: 100%;
+	}
+	.descriptive-skills {
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 20px;
+		& p:nth-of-type(4) {
+			margin-bottom: 10px;
+		}
+	}
+	.descriptive-text-right {
+		margin-top: 20px;
+	}
+}
+
+@media screen and (max-width: 680px) {
+	.descriptive-skills {
+		flex-wrap: wrap;
+		p {
+			text-decoration: underline;
+			width: 50%;
+		}
+	}
+	.descriptive-skill {
+		border-bottom: none;
+	}
+}
+
 @media screen and (max-width: 620px) {
 	.hero-content {
 		h1 {
@@ -17,9 +83,42 @@
 			content: '';
 		}
 	}
+	h2 {
+		font-size: 28px;
+	}
+	.project-images {
+		.project-image {
+			width: 50%;
+		}
+	}
 }
 
 @media screen and (max-width: 520px) {
+	#skills-section {
+		padding: 50px 0 0 0;
+		.section-container {
+			p {
+				font-size: 18px;
+			}
+		}
+	}
+	#portfolio-section {
+		.section-container {
+			padding: 50px 20px;
+		}
+	}
+	#project-section {
+		padding: 50px 0;
+	}
+	#descriptive-section {
+		.section-container {
+			padding: 50px 20px;
+		}
+	}
+	#quote-section {
+		padding: 50px 0px;
+	}
+	// Navbar and Hamburger Menu
 	.main-nav {
 		position: relative;
 	}
@@ -44,6 +143,16 @@
 		a {
 			color: white;
 			padding: 10px 0;
+		}
+	}
+
+	// Skills section
+	.skills-images {
+		flex-wrap: wrap;
+		width: 75%;
+		figure {
+			margin-bottom: 40px;
+			width: 50%;
 		}
 	}
 }
