--- a/sass/_media-query.scss
+++ b/sass/_media-query.scss
@@ -8,6 +8,22 @@
 			}
 		}
 	}
+	// Contact page
+	.contact-info {
+		flex-direction: column;
+		
+		> div {
+			margin-bottom: 20px;
+		}
+	}
+	.form-map {
+		flex-direction: column;
+		margin-bottom: 0;
+		.form,
+		.map {
+			width: 100%;
+		}
+	}
 }
 
 @media screen and (max-width: 750px) {
