Responsive styling for About page

--- a/sass/_media-query.scss
+++ b/sass/_media-query.scss
@@ -172,3 +172,16 @@
 		}
 	}
 }
+
+@media screen and (max-width: 500px) {
+	.about-section {
+		padding: 50px 0;
+	}
+	.about-images {
+		flex-wrap: wrap;
+		.about-image {
+			margin-bottom: 20px;
+			width: 46%;
+		}
+	}
+}
