--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -2,8 +2,10 @@
 	background-color: transparent;
 	border: none;
 	display: none;
+	outline: transparent;
 	i { 
 		color: $black;
+
 	}
 }
 
@@ -30,6 +32,10 @@
 		text-transform: uppercase;
 		letter-spacing: 2px;
 		font-size: 11px;
-		transition: all 0.3s;
+		border-bottom: 2px solid white;
+		transition: all 0.4s;
+		&:hover {
+			border-color: $black;
+		}
 	}
 }
