--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -1,11 +1,13 @@
 .content-sidebar {
 	margin: 50px auto 0;
 	max-width: 1080px;
-	padding: 0 15px;
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
 }
 .blog-content {
 	margin-right: 8%;
-	float: left;
+	// float: left;
 	width: 65%;
 }
 .blog-post {
