--- a/sass/_media-query.scss
+++ b/sass/_media-query.scss
@@ -5,7 +5,7 @@
 }
 @media screen and (max-width: 800px) {
 	.page-footer {
-		.section-container {
+		.footer-container {
 			flex-direction: column;
 			p {
 				margin-bottom: 20px;
@@ -35,6 +35,7 @@
 		.form,
 		.map {
 			width: 100%;
+			margin-bottom: 55px;
 		}
 	}
 }
@@ -50,6 +51,10 @@
 		margin: 0 auto;
 		width: 90%;
 	}
+	.portfolio-text p,
+	.portfolio-text h2 {
+		text-align: center;
+	}
 	#descriptive-section {
 		.section-container {
 			flex-direction: column;
@@ -57,7 +62,7 @@
 	}
 	.descriptive-title {
 		width: 100%;
-
+		text-align: center;
 		h2 {
 			margin: 0 auto 30px auto;
 			max-width: 95%;
@@ -66,11 +71,13 @@
 	.descriptive-text-left,
 	.descriptive-text-right {
 		width: 100%;
+		text-align: center;
 	}
 	.descriptive-skills {
 		display: flex;
 		justify-content: space-between;
 		margin-bottom: 20px;
+		text-align: center;
 		& p:nth-of-type(4) {
 			margin-bottom: 10px;
 		}
@@ -156,7 +163,10 @@
 	}
 	#menu-main-nav {
 		background-color: lighten($black, 10);
-		display: none;
+		// display: none;
+		display: flex;
+		visibility: hidden;
+		opacity: 0;
 		justify-content: space-around;
 		align-items: center;
 		flex-direction: column;
@@ -165,8 +175,12 @@
 		top: 73px;
 		right: 0;
 		padding: 38px 5px;
+		transition: opacity 0.4s;
 		&.show-main-nav {
 			display: flex;
+			top: 73px;
+			visibility: visible;
+			opacity: 1;
 		}
 		li {
 			margin: 0;
@@ -182,12 +196,15 @@
 	// Skills section
 	.skills-images {
 		flex-wrap: wrap;
-		width: 75%;
+		width: 100%;
 		figure {
 			margin-bottom: 40px;
 			width: 50%;
 		}
 	}
+#skills-section .section-container .skills-images img {
+	height: 110px;
+}
 }
 
 @media screen and (max-width: 500px) {
