--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -13,10 +13,10 @@ body {
 	font-weight: 300;
 }
 a {
-	color: #BA209B;
+	color: #aaa;
 	text-decoration: none;
 	&:hover {
-		color: #D424B1;
+		color: $black;
 	}
 }
 h2 {
