fixed blog images

--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -12,12 +12,15 @@
 }
 .blog-post {
 	margin: 25px 0 50px;
-	img {
-		// width: 100%;
-		max-height: 430px;
-	}
 	.entry-content {
 		margin-bottom: 10px;
+	}
+}
+.blog-image {
+	width: 100%;
+	img {
+		height: 50%;
+		width: 100%;
 	}
 }
 .entry-title {
